# copperspice

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  autogen.sh  binary_compatibility.md  build-copperspice-deb.sh  build-copperspice-rpm.sh  changelog  configure.ac  configure.bat  copperspice.spec.in  description.txt  qt-acconfig.h.cmake
src/: CMakeLists.txt
src/activeqt/container/: qaxbase.cpp  qaxbase.h  qaxdump.cpp  qaxobject.cpp  qaxobject.h  qaxscript.cpp  qaxscript.h  qaxscriptwrapper.cpp  qaxselect.cpp  qaxselect.h  qaxselect.ui  qaxwidget.cpp  qaxwidget.h
src/activeqt/control/: qaxaggregated.h  qaxbindable.cpp  qaxbindable.h  qaxfactory.cpp  qaxfactory.h  qaxmain.cpp  qaxserver.cpp  qaxserver.rc  qaxserverbase.cpp  qaxserverdll.cpp  qaxservermain.cpp
src/activeqt/shared/: qaxtypes.cpp  qaxtypes.h
src/annex/cs_libguarded/: cs_rcu_guarded.h  cs_rcu_list.h  cs_shared_guarded.h
src/annex/cs_pointer/: cs_enable_shared.h  cs_pointer_traits.h  cs_shared_array_pointer.h  cs_shared_pointer.h  cs_unique_array_pointer.h  cs_unique_pointer.h  cs_weak_pointer.h
src/annex/cs_signal/: cs_internal.h  cs_macro.h  cs_signal.cpp  cs_signal.h  cs_slot.cpp  cs_slot.h
src/annex/cs_string/: cs_char.h  cs_encoding.h  cs_string.h  cs_string_iterator.h  cs_string_view.h
src/core/: CMakeLists.txt  Makefile.am
src/core/animation/: CMakeLists.txt  Makefile.am  animation.cmake  qabstractanimation.cpp  qabstractanimation.h  qabstractanimation_p.h  qanimationdriver.h  qanimationgroup.cpp  qanimationgroup.h  qanimationgroup_p.h  qparallelanimationgroup.cpp  qparallelanimationgroup.h  qparallelanimationgroup_p.h  qpauseanimation.cpp  qpauseanimation.h  qpropertyanimation.cpp  qpropertyanimation.h  qpropertyanimation_p.h  qsequentialanimationgroup.cpp  qsequentialanimationgroup.h  qsequentialanimationgroup_p.h  qvariantanimation.cpp  qvariantanimation.h  qvariantanimation_p.h
src/core/arch/: CMakeLists.txt  Makefile.am  arch.cmake  qatomic_alpha.h  qatomic_arch.h  qatomic_arm.h  qatomic_armv5.h  qatomic_armv6.h  qatomic_armv7.h  qatomic_avr32.h  qatomic_bfin.h  qatomic_generic.h  qatomic_i386.h  qatomic_ia64.h  qatomic_macosx.h  qatomic_mips.h  qatomic_parisc.h  qatomic_powerpc.h  qatomic_s390.h  qatomic_sh.h  qatomic_sh4a.h  qatomic_sparc.h  qatomic_windows.h  qatomic_x86_64.h  qatomicint.h
src/core/codecs/: CMakeLists.txt  Makefile.am  codecs.cmake  qfontlaocodec.cpp  qfontlaocodec_p.h  qiconvcodec.cpp  qiconvcodec_p.h  qisciicodec.cpp  qisciicodec_p.h  qlatincodec.cpp  qlatincodec_p.h  qsimplecodec.cpp  qsimplecodec_p.h  qtextcodec.cpp  qtextcodec.h  qtextcodec_p.h  qtextcodecfactoryinterface.h  qtextcodecplugin.cpp  qtextcodecplugin.h  qtextdecoder.h  qtextencoder.h  qtsciicodec.cpp  qtsciicodec_p.h  qutfcodec.cpp  qutfcodec_p.h
src/core/concurrent/: CMakeLists.txt  Makefile.am  (+42 more)
src/corelib/: Makefile.am
src/dbus/: qdbus_symbols.cpp  qdbus_symbols_p.h  qdbusabstractadaptor.cpp  qdbusabstractadaptor.h  qdbusabstractadaptor_p.h  qdbusabstractinterface.cpp  qdbusabstractinterface.h  qdbusabstractinterface_p.h  qdbusargument.cpp  qdbusargument.h  qdbusargument_p.h  qdbusconnection.cpp  qdbusconnection.h  qdbusconnection_p.h  qdbusconnectioninterface.cpp  qdbusconnectioninterface.h  qdbusconnectionmanager_p.h  qdbuscontext.cpp  qdbuscontext.h  qdbuscontext_p.h  qdbusdemarshaller.cpp  qdbuserror.cpp  qdbuserror.h  qdbusextratypes.cpp  qdbusextratypes.h  qdbusintegrator.cpp  qdbusintegrator_p.h  qdbusinterface.cpp  qdbusinterface.h  qdbusinterface_p.h  qdbusinternalfilters.cpp  qdbusintrospection.cpp  qdbusintrospection_p.h  qdbusmacros.h  qdbusmarshaller.cpp  qdbusmessage.cpp  qdbusmessage.h  qdbusmessage_p.h  qdbusmetaobject.cpp  qdbusmetaobject_p.h  (+25 more)
src/declarative/: CMakeLists.txt  Makefile.am
src/gui/: CMakeLists.txt  Makefile.am
src/multimedia/: CMakeLists.txt  Makefile.am
src/network/: CMakeLists.txt  Makefile.am
src/opengl/: CMakeLists.txt  Makefile.am  qgl.cpp  qgl.h  qgl_egl.cpp  qgl_egl_p.h  qgl_mac.mm  qgl_p.h  qgl_qpa.cpp  qgl_qws.cpp  qgl_win.cpp  qgl_x11.cpp  qgl_x11egl.cpp  qglbuffer.cpp  qglbuffer.h  qglcolormap.cpp  qglcolormap.h  qglcontext.h  qglextensions.cpp  qglextensions_p.h  qglformat.h  qglframebufferobject.cpp  qglframebufferobject.h  qglframebufferobject_p.h  qglfunctions.cpp  qglfunctions.h  qglpaintdevice.cpp  qglpaintdevice_p.h  qglpixelbuffer.cpp  qglpixelbuffer.h  qglpixelbuffer_egl.cpp  qglpixelbuffer_mac.mm  qglpixelbuffer_p.h  qglpixelbuffer_stub.cpp  qglpixelbuffer_win.cpp  qglpixelbuffer_x11.cpp  qglpixmapfilter.cpp  qglpixmapfilter_p.h  qglscreen_qws.cpp  qglscreen_qws.h  (+22 more)
src/openvg/: qpaintengine_vg.cpp  qpaintengine_vg_p.h  qpixmapdata_vg.cpp  qpixmapdata_vg_p.h  qpixmapfilter_vg.cpp  qpixmapfilter_vg_p.h  qvg.h  qvg_p.h  qvgcompositionhelper_p.h  qvgfontglyphcache_p.h  qvgimagepool.cpp  qvgimagepool_p.h  qwindowsurface_vg.cpp  qwindowsurface_vg_p.h  qwindowsurface_vgegl.cpp  qwindowsurface_vgegl_p.h
src/phonon/: CMakeLists.txt  Makefile.am  global.h  phonon.h
src/script/: CMakeLists.txt  Makefile.am
src/scripttools/: CMakeLists.txt  Makefile.am
src/sql/: CMakeLists.txt  Makefile.am
src/svg/: CMakeLists.txt  Makefile.am  qgraphicssvgitem.cpp  qgraphicssvgitem.h  qsvgfont.cpp  qsvgfont_p.h  qsvggenerator.cpp  qsvggenerator.h  qsvggraphics.cpp  qsvggraphics_p.h  qsvghandler.cpp  qsvghandler_p.h  qsvgnode.cpp  qsvgnode_p.h  qsvgrenderer.cpp  qsvgrenderer.h  qsvgstructure.cpp  qsvgstructure_p.h  qsvgstyle.cpp  qsvgstyle_p.h  qsvgtinydocument.cpp  qsvgtinydocument_p.h  qsvgwidget.cpp  qsvgwidget.h  qtsvg.h
src/vulkan/: CMakeLists.txt  qvulkan_device_functions.cpp  qvulkan_device_functions.h  qvulkan_functions.cpp  qvulkan_functions.h  qvulkan_instance.cpp  qvulkan_instance.h  qvulkan_window.cpp  qvulkan_window.h  qvulkan_window_renderer.cpp  qvulkan_window_renderer.h  qvulkandevicefunctions.h  qvulkanfunctions.h  qvulkaninstance.h  qvulkanwindow.h  qvulkanwindowrenderer.h
src/webkit/: CMakeLists.txt  Makefile.am  qtwebkit.h
src/xml/: CMakeLists.txt  Makefile.am
src/xmlpatterns/: CMakeLists.txt  Makefile.am
(+8953 files in other folders)
